--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "18.3.1",
     "react-icons": "^5.2.1",
     "react-intersection-observer": "^9.10.2",
+    "resend": "^0.16.0",
     "tailwindcss": "3.4.3",
     "typescript": "5.4.5"
   }
